--- a/general/pooja-rules.html
+++ b/general/pooja-rules.html
@@ -2,18 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Pooja Rules - README</title>
+    <title>Puja Rules - README</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Centralized Styles -->
     <link rel="stylesheet" href="../styles/common.css">
 </head>
 <body>
-    <h1>🪔 Pooja Rules <span class="ENG">README</span></h1>
+    <h1>🪔 Puja Rules <span class="ENG">README</span></h1>
 
     <section>
         <h2>About</h2>
         <p>
-            This page provides an overview of the <strong>Pooja Rules</strong> section of this project. Here you'll find guidelines, best practices, and helpful notes for performing or documenting pooja (ritual worship) procedures.
+            This page provides an overview of the <strong>Puja Rules</strong> section of this project. Here you'll find guidelines, best practices, and helpful notes for performing or documenting puja (ritual worship) procedures.
         </p>
     </section>
 
@@ -57,13 +57,13 @@
         <h2>References</h2>
         <ul>
             <li>
-                <a href="https://youtu.be/Lm14pYFDlRw?si=7orRFKjVC9tpDB1B" target="_blank" rel="noopener">Nanduri Srinivas: Pooja Rules</a>
+                <a href="https://youtu.be/Lm14pYFDlRw?si=7orRFKjVC9tpDB1B" target="_blank" rel="noopener">Nanduri Srinivas: Puja Rules</a>
             </li>
         </ul>
     </section>
 
     <footer style="margin-top:2em; color:#888; font-size:0.95em;">
-        &copy; 2024 Pooja Rules Project. For educational and reference use.
+        &copy; 2024 Puja Rules Project. For educational and reference use.
     </footer>
 
     <!-- Centralized Scripts -->
