--- a/puja/vara-maha-lakshmi-puja.html
+++ b/puja/vara-maha-lakshmi-puja.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ವರಮಹಾಲಕ್ಷ್ಮಿ ಪೂಜ (Varamahalakshmi Pooja)</title>
+    <title>ವರಮಹಾಲಕ್ಷ್ಮಿ ಪೂಜ (Varamahalakshmi Puja)</title>
     <link rel="icon" type="image/x-icon" href="../favicon.ico">
 
     <!-- Centralized Styles -->
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <h1>ವರಮಹಾಲಕ್ಷ್ಮಿ ಪೂಜ <span class="ENG">(Varamahalakshmi Pooja)</span></h1>
+    <h1>ವರಮಹಾಲಕ್ಷ್ಮಿ ಪೂಜ <span class="ENG">(Varamahalakshmi Puja)</span></h1>
 
     <button class="toggle-btn" onclick="toggleVisibility()">Show/Hide English Transliteration</button>
 
@@ -88,7 +88,7 @@
         <span class="ENG">pūjādravyāṇi devaṁ ātmānaṁ samprokṣya<br></span>
     </p>
 
-    <h2>ಗಣಪತಿ ಪೂಜೆ<span class="ENG">(Ghanta Naadam)</span></h2>
+    <h2>ಗಣಪತಿ ಪೂಜೆ<span class="ENG">(Gaanapati Puja)</span></h2>
     <p>
         ವಕ್ರತುಂಡ ಮಹಾಕಾಯ ಸೂರ್ಯಕೊಟಿ ಸಮಪ್ರಭಃ ।<br>
         <span class="ENG">Vakratunda Mahākāya Sūryakoṭi Samaprabhaḥ |<br></span>
@@ -157,12 +157,13 @@
         <span class="ENG">Śrī Mahāgaṇapataye Namaḥ - Mantrapuṣpaṃ Samarpayāmi, Namaskāraṃ Samarpayāmi |<br></span><br>
 
         ಅನಯಾ ಯಥಾ ಶಕ್ತ್ಯಾ ಪೂಜಯಾ ಚ - ಶ್ರೀ ಮಹಾಗಣಪತಿಃ ಸುಪ್ರಸನ್ನಃ ಸುಪ್ರೀತಶ್ಚ ವರದೋ ಭವತು<br>
-        <span class="ENG">Anayā yathā śaktyā pūjayā ca - śrī mahāgaṇapatiḥ suprasannaḥ suprītaśca varado bhavatu<br></span><br>
+        <span class="ENG">Anayā yathā śaktyā pūjayā ca - śrī mahāgaṇapatiḥ suprasannaḥ suprītaśca varado
+            bhavatu<br></span><br>
 
         ಶ್ರೀ ಮಹಾಗಣಪತಿ ಪ್ರಸಾದಂ ಶಿರಸಾ ಗೃಹ್ಣಾಮಿ<br>
         <span class="ENG">śrī mahāgaṇapati prasādaṁ śirasā gṛhṇāmi ||</span>
 
-        
+
     </p>
 
     <h2>ಧ್ಯಾನಂ <span class="ENG">(Dhyaanam)</span></h2>
@@ -304,7 +305,7 @@
         <span class="ENG">Shri Varamahalakshmi devyai namah aabharanani samarpayaami</span>
     </p>
 
-    <h2>ಅಂಗಪೂಜಾ<span class="ENG">(Anga Pooja)</span></h2>
+    <h2>ಅಂಗಪೂಜಾ<span class="ENG">(Anga Puja)</span></h2>
     <p>
         ೧. ಚಾಂಚಲಾಯೈ ನಮಃ - ಪಾದೌ ಪೂಜಯಾಮಿ<br>
         <span class="ENG">Chaanchalaayai namah - Paadau poojayaami<br></span>
@@ -391,8 +392,7 @@
     <h2>ಪಾನೀಯ ಸಮರ್ಪಣೆ (Offering of Drink)</h2>
     <p>
         ಸತ್ಯಂ ತ್ವರ್ತೇನ ಪರಿಷಿಂಚಾಮಿ (Morning) / ಋತಂ ತ್ವಾ ಸತ್ಯೇನ ಪರಿಷಿಂಚಾಮಿ (Evening)<br>
-        <span class="ENG">Satyaṁ tvarteṇa pariṣimchāmi (Morning) / Ṛtaṁ tvā satyena pariṣimchāmi
-            (Evening)</span><br><br>
+        <span class="ENG">Satyaṁ tvarteṇa pariṣimchāmi (Morning) / Ṛtaṁ tvā satyena pariṣimchāmi (Evening)<br></span>
 
         ಅಮೃತಮಸ್ತು ಅಮೃತೋಪಸ್ತರಣಮಸಿ<br>
         <span class="ENG">Amṛtamastu amṛtopastaraṇamasi</span><br>
@@ -491,9 +491,10 @@
         <span class="ENG">Adhānāḥ sādhanāḥ santu jīvantu śaradāṁ śataṁ</span>
     </p>
 
-    <h2>ತೋರಗ್ರಂಧಿ ಪೂಜೆ (Thoragranthi Pooje)</h2>
+    <h2>ತೋರಗ್ರಂಧಿ ಪೂಜೆ (Thoragranthi Puja)</h2>
     <p>
-        Worship thooranam with Kumkum/Akshatas<br><br>
+        <b>Worship thooram (9 threads) with Kumkum/Akshatas:</b><br>
+
         ಕಮಲಾಯೈನಮಃ ಪ್ರಥಮ ಗ್ರಂಥಿಂ ಪೂಜಯಾಮಿ,<br>
         <span class="ENG">Kamalāyainamahaḥ prathama granthiṁ pūjayāmi,<br></span>
         ರಮಾಯೈನಮಃ ದ್ವಿತೀಯ ಗ್ರಂಥಿಂ ಪೂಜಯಾಮಿ,<br>
@@ -513,7 +514,7 @@
         ಶ್ರೀ ವರಲಕ್ಷ್ಮೀಯೈ ನಮಃ ನವಮ ಗ್ರಂಥಿಂ ಪೂಜಯಾಮಿ<br>
         <span class="ENG">Śrī varalakṣmīyai namaḥ navama granthiṁ pūjayāmi<br></span><br>
 
-        Wear toram while chanting below mantra<br><br>
+        <b>Wear toram while chanting below mantra:</b><br>
 
         ಬಂಧ್ನಾಮಿ ದಕ್ಷಿಣೇಹಸ್ತೇ ನವಸೂತ್ರಂ ಶುಭಪ್ರದಂ<br>
         <span class="ENG">Bandhnāmi dakṣiṇēhaste navasūtraṁ śubhapradaṁ<br></span>
@@ -523,7 +524,7 @@
 
     <h2>ವಾಯನ ದಾನಂ (vaayana dhaanam)</h2>
     <p>
-        Chant this mantra and give vaayanam<br><br>
+        <b>Chant this mantra and give vaayanam (offerings to ladies):</b><br>
 
         ಇಂದಿರಾ ಪ್ರತಿಗೃಹ್ಣಾತು ಇಂದಿರಾವೈ ದದಾತಿಚ<br>
         <span class="ENG">Indirā pratigṛhṇātu indirāvai dadātica<br></span>
