--- a/puja/venkateswara-puja.html
+++ b/puja/venkateswara-puja.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ವೆಂಕಟೇಶ್ವರ ಪೂಜ (Venkateswara Pooja)</title>
+    <title>ವೆಂಕಟೇಶ್ವರ ಪೂಜ (Venkateswara Puja)</title>
     <link rel="icon" type="image/x-icon" href="../favicon.ico">
     
     <!-- Centralized Styles -->
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <h1>ವೆಂಕಟೇಶ್ವರ ಪೂಜ <span class="ENG">(Venkateswara Pooja)</span></h1>
+    <h1>ವೆಂಕಟೇಶ್ವರ ಪೂಜ <span class="ENG">(Venkateswara Puja)</span></h1>
 
     <button class="toggle-btn" onclick="toggleVisibility()">Show/Hide English Transliteration</button>
 
