--- a/puja/ganapati-puja.html
+++ b/puja/ganapati-puja.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ಗಣಪತಿ ಪೂಜ (Ganapati Pooja)</title>
+    <title>ಗಣಪತಿ ಪೂಜ (Ganapati Puja)</title>
     <link rel="icon" type="image/x-icon" href="../favicon.ico">
     
     <!-- Centralized Styles -->
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <h1>ಗಣಪತಿ ಪೂಜ (Ganapati Pooja)</h1>
+    <h1>ಗಣಪತಿ ಪೂಜ (Ganapati Puja)</h1>
 
     <button class="toggle-btn" onclick="toggleVisibility()">Show/Hide English Transliteration</button>
 
