--- a/puja/hanumaan-puja.html
+++ b/puja/hanumaan-puja.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ಹನುಮಾನ್ ಪೂಜೆ (Hanumaan Pooja)</title>
+    <title>ಹನುಮಾನ್ ಪೂಜೆ (Hanumaan Puja)</title>
     <link rel="icon" type="image/x-icon" href="../favicon.ico">
     
     <!-- Centralized Styles -->
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <h1>ಹನುಮಾನ್ ಪೂಜೆ <span class="ENG">(Hanumaan Pooja)</span></h1>
+    <h1>ಹನುಮಾನ್ ಪೂಜೆ <span class="ENG">(Hanumaan Puja)</span></h1>
 
     <button class="toggle-btn" onclick="toggleVisibility()">Show/Hide English Transliteration</button>
 
