added ghantaa naadham

--- a/puja/lakshmi-puja.html
+++ b/puja/lakshmi-puja.html
@@ -43,14 +43,7 @@
         </span>
     </b>
 
-    <h2>ದೇವತಾ-ಅವಾಹನ <span class="ENG">(Devatāvāhana)</span></h2>
-    <p>
-        ಆಗಮಾರ್ಥಂ ತು ದೇವಾನಾಂ ಗಮನಾರ್ಥಂ ತು ರಕ್ಷ ಸಾಮ್ |<br>
-        <span class="ENG">āgamārthaṃ tu devānāṃ gamanārthaṃ tu rakṣasām |<br></span>
-
-        ಕುರು ಘಂಟಾರವಂ ತತ್ರ ದೇವತಾ ಹ್ವಾನ ಲಾಞ್ಛನಮ್ ||<br>
-        <span class="ENG">kuru ghaṇṭāravaṃ tatra devatāhvāna laañchanam ||<br></span>
-    </p>
+    <div id="ghantaa-nadham"></div>
 
     <h2>ಪಂಚೋಪಚಾರ <span class="ENG">(Panchoopachaara)</span></h2>
     <p>
