--- a/puja/vara-maha-lakshmi-puja.html
+++ b/puja/vara-maha-lakshmi-puja.html
@@ -112,25 +112,37 @@
         <b>To the kalasha water, offer akshatas, mix with mango leaves while reciting the following mantra:</b><br>
 
         ಕಲಶಸ್ಯ ಮುಖೇ ವಿಷ್ಣುಃ ಕಂಠೇ ರುದ್ರಸ್ಸಮಾಶ್ರಿತಃ <br>
-        <span class="ENG">kalashasya mukhe viṣṇuḥ kaṇṭhe rudraḥ samāśritaḥ<br></span>
+        <span class="ENG">kalashasya mukhe viṣṇuḥ kaṇṭhe rudraḥ samāśritaḥ
+            At the mouth (top) of the Kalasha resides Vishnu,
+            At the neck of the Kalasha resides Rudra<br></span>
 
         ಮೂಲೇ ತತ್ರ ಸ್ಥಿತೋ ಬ್ರಹ್ಮಾ ಮಧ್ಯೆ ಮಾತೃಗಣಾಃ ಸ್ಮೃತಾಃ <br>
-        <span class="ENG">mūle tatra sthito brahmā madhye mātr̥gaṇāḥ smṛtāḥ<br></span>
+        <span class="ENG">mūle tatra sthito brahmā madhye mātr̥gaṇāḥ smṛtāḥ
+            At the base of the Kalasha is Brahma
+            In the middle are said to dwell the Matrikas (Mother Goddesses).<br></span>
 
         ಕುಕ್ಷೌ ತು ಸಾಗರಾಃ ಸರ್ವೇ ಸಪ್ತದ್ವೀಪಾ ವಸುಂಧರಾ <br>
-        <span class="ENG">kukṣau tu sāgarāḥ sarve saptadvīpā vasundharā<br></span>
+        <span class="ENG">kukṣau tu sāgarāḥ sarve saptadvīpā vasundharā
+            In the belly of the Kalasha are all the oceans
+            The seven continents and the Earth herself<br></span>
 
         ಋಗ್ವೇದೋ ಥ ಯಜುರ್ವೇದಸ್ಸಾಮವೇದೋ ಹ್ಯಥರ್ವಣಃ <br>
-        <span class="ENG">ṛgvedo'tha yajurvedaḥ sāmavedo hyatharvaṇaḥ<br></span>
+        <span class="ENG">ṛgvedo'tha yajurvedaḥ sāmavedo hyatharvaṇaḥ
+            The Rigveda, Yajurveda, Samaveda, and indeed the Atharvaveda<br></span>
 
         ಅಂಗೈಶ್ಚ ಸಹಿತಾಃ ಸರ್ವೇ ಕಲಶಾಂಬು ಸಮಾಶ್ರಿತಾಃ <br>
-        <span class="ENG">aṅgaiśca sahitāḥ sarve kalaśāmbu samāśritāḥ<br></span>
+        <span class="ENG">aṅgaiśca sahitāḥ sarve kalaśāmbu samāśritāḥ
+            Together with all their limbs, they are all established in the water of the Kalasha.<br></span>
 
         ಗಂಗೆಚ ಯಮುನೇಚೈವ ಗೋದಾವರಿ ಸರಸ್ವತೀ <br>
-        <span class="ENG">gaṅgeca yamunecaiva godāvari sarasvatī<br></span>
+        <span class="ENG">gaṅgeca yamunecaiva godāvari sarasvatī
+            Ganga, Yamuna, Godavari, and Saraswati<br></span>
 
         ನರ್ಮದಾ ಸಿಂಧು ಕಾವೇರಿ ಜಲೆಸ್ಮಿನ್ ಸನ್ನಿಧಿಂ ಕುರು <br>
-        <span class="ENG">narmadā sindhu kāveri jalesmin sannidhiṁ kuru<br></span><br>
+        <span class="ENG">narmadā sindhu kāveri jalesmin sannidhiṁ kuru
+            Narmada, Sindhu, and Kaveri
+            Establish your divine presence in this water
+            <br></span><br>
 
         <b>Pour kalasha water over us & puja items, while reciting mantra:</b><br>
 
@@ -146,8 +158,9 @@
         ನಿರ್ವಿಘ್ನಂ ಕುರು ಮೇ ದೇವ ಸರ್ವಕಾರ್ಯೇಷು ಸರ್ವದಾ ॥<br>
         <span class="ENG">Nirvighnaṃ Kuru Me Deva Sarvakāryeṣu Sarvadā ||<br></span><br>
 
-        ಆದೌ ನಿರ್ವಿಘ್ನ-ಪರಿಸಮಾಪ್ತಯರ್ಥಂ ಶ್ರೀ ಮಹಾಗಣಪತಿಪೂಜಾಂ ಕರಿಷ್ಯೇ ॥<br>
-        <span class="ENG">Ādau nirvighna-parisamāptayartham śrī mahāgaṇapatipūjāṃ kariṣye ||<br></span><br>
+        ಆದೌ ನಿರ್ವಿಘ್ನ-ಪರಿ-ಸಮಾಪ್ತ-ಯರ್ಥಂ ಶ್ರೀ ಮಹಾಗಣಪತಿಪೂಜಾಂ ಕರಿಷ್ಯೇ ॥<br>
+        <span class="ENG">Ādau nirvighna-pari-samāpti-artham śrī mahāgaṇapatipūjāṃ kariṣye ||
+            At the beginning, for the successful completion without obstacles, I will perform the worship of the revered Mahaganapati<br></span><br>
 
         ಶ್ರೀ ಮಹಾಗಣಪತಯೇ ನಮಃ - ಧ್ಯಾಯಾಮಿ |<br>
         <span class="ENG">Śrī Mahāgaṇapataye Namaḥ - Dhyāyāmi |<br></span>
@@ -196,13 +209,14 @@
         ಶ್ರೀ ಮಹಾಗಣಪತಯೇ ನಮಃ - ನೈವೇದ್ಯಂ ಸಮರ್ಪಯಾಮಿ |<br>
         <span class="ENG">Śrī Mahāgaṇapataye Namaḥ - Naivedyaṃ Samarpayāmi |<br></span><br>
 
-        ಸತ್ಯಂ ತ್ವರ್ಥೇನ ಪರಿಷಂಚಾಮಿ ಅಮೃತಮಸ್ತ್ವಮೃತೋಪಸ್ತರಣಮಸಿ<br>
-        <span class="ENG">satyaṁ tvarthena pariṣañcāmi amṛtamastu amṛtopastaraṇam asi<br></span>
+        ಸತ್ಯಂ ತ್ವ ಅರ್ಥೇನ ಪರಿಷಂಚಾಮಿ ಅಮೃತಮಸ್ತ್ವಮೃತೋಪಸ್ತರಣಮಸಿ (ಅಮೃತಮ್-ಅಸ್ತು ಅಮೃತ-ಉಪಸ್ತರಣಂ ಅಸಿ)<br>
+        <span class="ENG">satyaṁ tvarthena pariṣañcāmi amṛtamastu amṛtopastaraṇam asi
+            O sacred seat, I sprinkle you with sincerity. May you be immortal nectar; you are the immortal covering/seating for the deity.<br></span>
 
         ಪ್ರಾಣಾಯ ಸ್ವಾಹಾ - ಅಪಾನಾಯ ಸ್ವಾಹಾ - ವ್ಯಾನಾಯ ಸ್ವಾಹಾ - ಉದಾನಾಯ ಸ್ವಾಹಾ<br>
         <span class="ENG">prāṇāya svāhā - apānāya svāhā - vyānāya svāhā - udānāya svāhā<br></span>
 
-        ಮಧ್ಯೇ ಮಧ್ಯೇ ಪಾನೀಯಂ ಸಮರ್ಪಯಾಮಿ - ಅಮೃತಮಸ್ತು ಅಮೃತಾಪಿಧಾನಮಸಿ<br>
+        ಮಧ್ಯೇ ಮಧ್ಯೇ ಪಾನೀಯಂ ಸಮರ್ಪಯಾಮಿ - ಅಮೃತಮಸ್ತು ಅಮೃತಾಪಿಧಾನಮಸಿ (ಅಮೃತ-ಆಪಿಧಾನಂ-ಅಸಿ)<br>
         <span class="ENG">Madhye madhye pānīyaṁ samarpayāmi - amṛtamastu amṛtāpidhānamasi</span><br>
 
         ಶ್ರೀ ಮಹಾಗಣಪತಯೇ ನಮಃ - ತಾಂಬೂಲಂ ಸಮರ್ಪಯಾಮಿ |<br>
