--- a/puja/vara-maha-lakshmi-puja.html
+++ b/puja/vara-maha-lakshmi-puja.html
@@ -150,11 +150,11 @@
         <span class="ENG">pūjādravyāṇi devaṁ ātmānaṁ samprokṣya<br></span>
     </p>
 
-    <h1>ಗಣಪತಿ ಪೂಜೆ<span class="ENG">(Gaanapati Puja)</span></h1>
+    <h1>ಗಣಪತಿ ಪೂಜೆ<span class="ENG">(Ganapati Puja)</span></h1>
     <p style="background-color: #F9ECE3;">
+
         ವಕ್ರತುಂಡ ಮಹಾಕಾಯ ಕೊಟಿಸೂರ್ಯ ಸಮಪ್ರಭಃ ।<br>
         <span class="ENG">Vakratunda Mahākāya Koṭi-Sūrya Samaprabhaḥ |<br></span>
-
         ನಿರ್ವಿಘ್ನಂ ಕುರು ಮೇ ದೇವ ಸರ್ವಕಾರ್ಯೇಷು ಸರ್ವದಾ ॥<br>
         <span class="ENG">Nirvighnaṃ Kuru Me Deva Sarvakāryeṣu Sarvadā ||<br></span><br>
 
@@ -164,70 +164,57 @@
 
         ಶ್ರೀ ಮಹಾಗಣಪತಯೇ ನಮಃ - ಧ್ಯಾಯಾಮಿ |<br>
         <span class="ENG">Śrī Mahāgaṇapataye Namaḥ - Dhyāyāmi |<br></span>
-
         ಆವಾಹಯಾಮಿ |<br>
-        <span class="ENG">Śrī Mahāgaṇapataye Namaḥ - Āvāhayāmi |<br></span>
-
+        <span class="ENG">Āvāhayāmi |<br></span>
         ಆಸನಂ ಸಮರ್ಪಯಾಮಿ |<br>
-        <span class="ENG">Śrī Mahāgaṇapataye Namaḥ - Āsanaṃ Samarpayāmi |<br></span>
-
+        <span class="ENG">Āsanaṃ Samarpayāmi |<br></span>
         ಪಾದಯೋಃ ಪಾದ್ಯಂ ಸಮರ್ಪಯಾಮಿ |<br>
-        <span class="ENG">Śrī Mahāgaṇapataye Namaḥ - Pādayoḥ Pādyaṃ Samarpayāmi |<br></span>
-
+        <span class="ENG">Pādayoḥ Pādyaṃ Samarpayāmi |<br></span>
         ಹಸ್ತಯೋಃ ಅರ್ಘ್ಯಂ ಸಮರ್ಪಯಾಮಿ |<br>
-        <span class="ENG">Śrī Mahāgaṇapataye Namaḥ - Hastayoḥ Arghyaṃ Samarpayāmi |<br></span>
-
+        <span class="ENG">Hastayoḥ Arghyaṃ Samarpayāmi |<br></span>
         ಆಚಮನೀಯಂ ಸಮರ್ಪಯಾಮಿ |<br>
-        <span class="ENG">Śrī Mahāgaṇapataye Namaḥ - Ācamaneeyaṃ Samarpayāmi |<br></span>
-
+        <span class="ENG">Ācamaneeyaṃ Samarpayāmi |<br></span>
         ಸ್ನಾನಂ ಸಮರ್ಪಯಾಮಿ |<br>
-        <span class="ENG">Śrī Mahāgaṇapataye Namaḥ - Snānaṃ Samarpayāmi |<br></span>
-
+        <span class="ENG">Snānaṃ Samarpayāmi |<br></span>
         ವಸ್ತ್ರಯುಗ್ಮಂ ಸಮರ್ಪಯಾಮಿ |<br>
-        <span class="ENG">Śrī Mahāgaṇapataye Namaḥ - Vastrayugmaṃ Samarpayāmi |<br></span>
-
+        <span class="ENG">Vastrayugmaṃ Samarpayāmi |<br></span>
         ಯಜ್ಞೋಪವೀತಂ ಸಮರ್ಪಯಾಮಿ |<br>
-        <span class="ENG">Śrī Mahāgaṇapataye Namaḥ - Yajñopavītaṃ Samarpayāmi |<br></span>
-
+        <span class="ENG">Yajñopavītaṃ Samarpayāmi |<br></span>
         ಗಂಧಂ ಸಮರ್ಪಯಾಮಿ ***** |<br>
-        <span class="ENG">Śrī Mahāgaṇapataye Namaḥ - Gandhaṃ Samarpayāmi |<br></span>
-
+        <span class="ENG">Gandhaṃ Samarpayāmi |<br></span>
         ಪುಷ್ಪಾಣಿ ಸಮರ್ಪಯಾಮಿ |<br>
-        <span class="ENG">Śrī Mahāgaṇapataye Namaḥ - Puṣpāṇi Samarpayāmi |<br></span>
-
+        <span class="ENG">Puṣpāṇi Samarpayāmi |<br></span>
         ಅಭರಣಾನಿ ಸಮರ್ಪಯಾಮಿ |<br>
-        <span class="ENG">Śrī Mahāgaṇapataye Namaḥ - Abharanaani Samarpayāmi |<br></span>
+        <span class="ENG">Abharanaani Samarpayāmi |<br></span>
 
         ಶ್ರೀ ಮಹಾಗಣಪತಯೇ ನಮಃ - ಧೂಪಂ ಆಘ್ರಾಪಯಾಮಿ |<br>
         <span class="ENG">Śrī Mahāgaṇapataye Namaḥ - Dhūpaṃ Āghrāpayāmi |<br></span>
 
         ಶ್ರೀ ಮಹಾಗಣಪತಯೇ ನಮಃ - ದೀಪಂ ದರ್ಶಯಾಮಿ |<br>
-        <span class="ENG">Śrī Mahāgaṇapataye Namaḥ - Deepaṃ Darśayāmi |<br></span>
+        <span class="ENG">Śrī Mahāgaṇapataye Namaḥ - Deepaṃ Darśayāmi |<br></span><br>
 
-        Keep 2 bananas to god, open one a bit:
+        <b>Keep 2 bananas to god, open one a bit:</b><br>
 
         ಶ್ರೀ ಮಹಾಗಣಪತಯೇ ನಮಃ - ನೈವೇದ್ಯಂ ಸಮರ್ಪಯಾಮಿ |<br>
         <span class="ENG">Śrī Mahāgaṇapataye Namaḥ - Naivedyaṃ Samarpayāmi |<br></span><br>
 
-        ಸತ್ಯಂ ತ್ವ ಅರ್ಥೇನ ಪರಿಷಂಚಾಮಿ ಅಮೃತಮಸ್ತ್ವಮೃತೋಪಸ್ತರಣಮಸಿ (ಅಮೃತಮ್-ಅಸ್ತು ಅಮೃತ-ಉಪಸ್ತರಣಂ ಅಸಿ)<br>
-        <span class="ENG">satyaṁ tvarthena pariṣañcāmi amṛtamastu amṛtopastaraṇam asi
+        ಸತ್ಯಂ ತ್ವರ್ತೇನ ಪರಿಷಿಂಚಾಮಿ | ಅಮೃತಮಸ್ತು | ಅಮೃತೋಪಸ್ತರಣಮಸೀ | ಸ್ವಾಹಾ ||<br>
+        <span class="ENG">Satyam tvartena parishinchami. Amrutam astu. Amrutopastaranam asi. Swaha.
             O sacred seat, I sprinkle you with sincerity. May you be immortal nectar; you are the immortal covering/seating for the deity.<br></span>
 
-        ಪ್ರಾಣಾಯ ಸ್ವಾಹಾ - ಅಪಾನಾಯ ಸ್ವಾಹಾ - ವ್ಯಾನಾಯ ಸ್ವಾಹಾ - ಉದಾನಾಯ ಸ್ವಾಹಾ<br>
-        <span class="ENG">prāṇāya svāhā - apānāya svāhā - vyānāya svāhā - udānāya svāhā<br></span>
+        ಓಂ ಪ್ರಾಣಾಯ ಸ್ವಾಹಾ | ಓಂ ಅಪಾನಾಯ ಸ್ವಾಹಾ | ಓಂ ವ್ಯಾನಾಯ ಸ್ವಾಹಾ | ಓಂ ಉದಾನಾಯ ಸ್ವಾಹಾ | ಓಂ ಸಮಾನ್ಯಾಯ ಸ್ವಾಹಾ ||<br>
+        <span class="ENG">Om Pranaya Swaha. Om Apanaya Swaha. Om Vyanaya Swaha. Om Udanaya Swaha. Om Samanaya Swaha.<br></span>
 
-        ಮಧ್ಯೇ ಮಧ್ಯೇ ಪಾನೀಯಂ ಸಮರ್ಪಯಾಮಿ - ಅಮೃತಮಸ್ತು ಅಮೃತಾಪಿಧಾನಮಸಿ (ಅಮೃತ-ಆಪಿಧಾನಂ-ಅಸಿ)<br>
-        <span class="ENG">Madhye madhye pānīyaṁ samarpayāmi - amṛtamastu amṛtāpidhānamasi</span><br>
+        ಮಧ್ಯೇ ಮಧ್ಯೇ ಪಾನೀಯಂ ಸಮರ್ಪಯಾಮಿ | ಅಮೃತಮಸ್ತು | ಅಮೃತಾಪಿಧಾನಮಸೀ | ಸ್ವಾಹಾ ||<br>
+        <span class="ENG">Madhyamadhye paniyam samarpayami. Amrutam astu. Amrutapidhana-m asi. Swaha.</span><br>
 
         ಶ್ರೀ ಮಹಾಗಣಪತಯೇ ನಮಃ - ತಾಂಬೂಲಂ ಸಮರ್ಪಯಾಮಿ |<br>
         <span class="ENG">Śrī Mahāgaṇapataye Namaḥ - Tāmbūlaṃ Samarpayāmi |<br></span><br>
 
         ಘೃತವರ್ತಿ ಸಹಸ್ರೈಶ್ಚ ಕರ್ಪೂರಶಕಲೈ ಸ್ತಧಾ<br>
         <span class="ENG">ghRtavarti Sahasraiśca (Sahas-rice-cha) karpooraSakalai stadhaa<br></span>
-
         ನೀರಾಜನಂ ಮಯಾದತ್ತಂ ಗೃಹಾಣ ವರದೋ ಭವ<br>
         <span class="ENG">neeraajanaM mayaadattaM gRhaaNa varadO bhava<br></span>
-
         ಶ್ರೀ ಮಹಾಗಣಾಧಿಪತಯೇ ನಮಃ ಕರ್ಪೂರ ನೀರಾಜನಂ ಸಮರ್ಪಯಾಮಿ<br>
         <span class="ENG">Sree mahaagaNaadhipatayae namaḥ karoora neeraajanaM samarpayaami<br></span>
 
@@ -237,19 +224,16 @@
         ಶ್ರೀ ಮಹಾಗಣಪತಯೇ ನಮಃ - ಮಂತ್ರಪುಷ್ಪಂ ಸಮರ್ಪಯಾಮಿ, ನಮಸ್ಕಾರಂ ಸಮರ್ಪಯಾಮಿ |<br>
         <span class="ENG">Śrī Mahāgaṇapataye Namaḥ - Mantrapuṣpaṃ Samarpayāmi, Namaskāraṃ Samarpayāmi |<br></span><br>
 
-        ಅನಯಾ ಯಥಾ ಶಕ್ತ್ಯಾ ಪೂಜಯಾ ಚ - ಶ್ರೀ ಮಹಾಗಣಪತಿಃ ಸುಪ್ರಸನ್ನಃ ಸುಪ್ರೀತಶ್ಚ ವರದೋ ಭವತು<br>
-        <span class="ENG">Anayā yathā śaktyā pūjayā ca - śrī mahāgaṇapatiḥ suprasannaḥ suprītaśca varado
-            bhavatu<br></span><br>
+        ಅನಯಾ ಯಥಾಶಕ್ತಿ ಪೂಜಯಾ ಚ | <br>
+        <span class="ENG">AnayA yathAshakti pUjayA cha |<br></span>
+
+        ಶ್ರೀ ಮಹಾಗಣಾಧಿಪತಿ ದೇವತಾ ಸುಪ್ರಸನ್ನಃ ಸುಪ್ರೀತೋ ವರದೋ ಭವತು ||<br>
+        <span class="ENG">Śrī <u>mahāgaṇādhipati-DEVATA</u> devatA suprasannaH suprEtO varadO bhavatu ||<br></span><br>
 
         <b>Take some akshatas from near ganapati and put on the heads:</b><br>
         ಶ್ರೀ ಮಹಾಗಣಪತಿ ಪ್ರಸಾದಂ ಶಿರಸಾ ಗೃಹ್ಣಾಮಿ<br>
         <span class="ENG">śrī mahāgaṇapati prasādaṁ śirasā gṛhṇāmi ||</span>
 
-        ಅನಯಾ ಯಥಾಶಕ್ತಿ ಪೂಜಯಾ ಚ | <br>
-        <span class="ENG">AnayA yathAshakti pUjayA cha |<br></span>
-
-        ಶ್ರೀ ಮಹಾಗಣಾಧಿಪತಿ ದೇವತಾ ಸುಪ್ರಸನ್ನಃ ಸುಪ್ರೀತೋ ವರದೋ ಭವತು ||<br>
-        <span class="ENG">Śrī <u>mahāgaṇādhipati-DEVATA</u> devatA suprasannaH suprEtO varadO bhavatu ||<br></span>
     </p>
 
     <h1>ಷೋಡಶೋಪಚಾರ ಪೂಜೆ <span class="ENG">(Shodashopachara Puja)</span></h1>
@@ -278,7 +262,7 @@
     </p>
 
     <h2>ಆವಾಹನಂ<span class="ENG">(Aavahanam)</span></h2>
-    <p>
+    <p style="background-color: #F9ECE3;">
         ಸಹಸ್ರದಳಪದ್ಮಾಸ್ಯಾಂ ಸ್ವಸ್ಥಾಂ ಚ ಸುಮನೋಹರಾಂ<br>
         <span class="ENG">Sahasradala padmaasyaam swasthaam cha sumanoharaam<br></span>
         ಶಾಂತಾಂ ಚ ಶ್ರೀಹರೇಃ ಕಾಂತಾಂ ತಾಂ ಭಜೇ ಜಗತಾಂ ಪ್ರಸೂಮ್ |<br>
