--- a/puja/vara-maha-lakshmi-puja.html
+++ b/puja/vara-maha-lakshmi-puja.html
@@ -158,7 +158,7 @@
         ನಿರ್ವಿಘ್ನಂ ಕುರು ಮೇ ದೇವ ಸರ್ವಕಾರ್ಯೇಷು ಸರ್ವದಾ ॥<br>
         <span class="ENG">Nirvighnaṃ Kuru Me Deva Sarvakāryeṣu Sarvadā ||<br></span><br>
 
-        ಆದೌ ನಿರ್ವಿಘ್ನ-ಪರಿ-ಸಮಾಪ್ತ-ಯರ್ಥಂ ಶ್ರೀ ಮಹಾಗಣಪತಿಪೂಜಾಂ ಕರಿಷ್ಯೇ ॥<br>
+        ಆದೌ ನಿರ್ವಿಘ್ನ-ಪರಿ-ಸಮಾಪ್ತ-ಯರ್ಥಂ ಶ್ರೀ ಮಹಾ-ಗಣಪತಿ-ಪೂಜಾಂ ಕರಿಷ್ಯೇ ॥<br>
         <span class="ENG">Ādau nirvighna-pari-samāpti-artham śrī mahāgaṇapatipūjāṃ kariṣye ||
             At the beginning, for the successful completion without obstacles, I will perform the worship of the revered Mahaganapati<br></span><br>
 
@@ -263,7 +263,7 @@
 
     <h2>ಆವಾಹನಂ<span class="ENG">(Aavahanam)</span></h2>
     <p style="background-color: #F9ECE3;">
-        ಸಹಸ್ರದಳಪದ್ಮಾಸ್ಯಾಂ ಸ್ವಸ್ಥಾಂ ಚ ಸುಮನೋಹರಾಂ<br>
+        ಸಹಸ್ರದಳಪದ್ಮಾಸ್ಯಾಂ (syaam) ಸ್ವಸ್ಥಾಂ ಚ ಸುಮನೋಹರಾಂ<br>
         <span class="ENG">Sahasradala padmaasyaam swasthaam cha sumanoharaam<br></span>
         ಶಾಂತಾಂ ಚ ಶ್ರೀಹರೇಃ ಕಾಂತಾಂ ತಾಂ ಭಜೇ ಜಗತಾಂ ಪ್ರಸೂಮ್ |<br>
         <span class="ENG">Shaantam cha Shrihareh kaantaam taam bhaje jagataam prasoom |<br></span>
@@ -300,8 +300,8 @@
 
     <h2>ಅರ್ಘ್ಯಂ<span class="ENG">(Arghya)</span></h2>
     <p style="background-color: #F9ECE3;">
-        ಪುಷ್ಪ-ಚಂದನ-ದೂರ್ವಾದಿ ಸಂಯುತಂ ಜಾಹ್ನವೀ-ಜಲಂ<br>
-        <span class="ENG">Pushpa-chandana-durvaadi samyutam Jaahnavi jalam<br></span>
+        ಪುಷ್ಪ-ಚಂದನ-ದೂರ್ವಾದಿ ಸಂಯುತಂ ಜಾಹ್ನವೀ(navee)-ಜಲಂ<br>
+        <span class="ENG">Pushpa-chandana-duurvaadi samyutam Jaahnavi jalam<br></span>
         ಶಂಖ-ಗರ್ಭ-ಸ್ಥಿತಂ ಶುದ್ಧಂ ಗೃಹ್ಯತಾಂ ಪದ್ಮವಾಸಿನೀಂ<br>
         <span class="ENG">Shankha-garbha-sthitam shuddham grihyataam Padmavaasineem<br></span>
         <b>Offer water to the idol:</b><br>
@@ -352,8 +352,8 @@
     <p style="background-color: #F9ECE3;">
         ಶಬ್ದ ಬ್ರಹ್ಮಾತ್ಮಿಕೇ ದೇವೀ ಶಬ್ದ ಶಾಸ್ತ್ರ ಕೃತಾಲಯೇ<br>
         <span class="ENG">Shabda brahmātmike devi shabda shastra krutālayae<br></span>
-        ಸೌವರ್ಣಂ ಯಜ್ಞ ಸೂತ್ರಂತೇ, ದದಾಮಿ ಪರಮೇಶ್ವರಿ<br>
-        <span class="ENG">Sauvaranam yajna sutramtae, dadami paramesvari<br></span>
+        ಸೌವರ್ಣಂ ಯಜ್ಞ ಸೂತ್ರಂತೇ (sutra), ದದಾಮಿ ಪರಮೇಶ್ವರಿ<br>
+        <span class="ENG">Sauvaranam yajna sutramtae, dadaami parameswari<br></span>
 
         <b>Offer yajñopavītam to the deity:</b><br>
         ಶ್ರೀ ವರಮಹಾಲಕ್ಷ್ಮೀ ದೇವ್ಯೈ ನಮಃ ಯಜ್ಞೋಪವೀತಂ ಸಮರ್ಪಯಾಮಿ<br>
@@ -362,9 +362,9 @@
 
     <h2>ಗಂಧಂ<span class="ENG">(Gandha)</span></h2>
     <p style="background-color: #F9ECE3;">
-        ಕಸ್ತೂರಿ ಕಂಕಣೈರ್ಯುಕ್ತಂ ಗಂಧಸ್ವರ ವಿಪುಲಂ ಶುಭಂ<br>
         ಕಸ್ತೂರೀ-ಕುಂಕುಮೈಃ ಯುಕ್ತಂ ಘನಸಾರ-ವಿಮಿಶ್ರಿತಂ<br>
-        <span class="ENG">Kasturi-kumkumaih yuktam ghana-saara-vimishritam<br></span>
+        <span class="ENG">Kasturi-kumkumaih yuktam ghana-saara-vimishritam
+            Let the dense mixture of musk, kumkum and sandal (from western ghats) be accepted<br></span>
         ಮಲಯಾಚಲ-ಸಂಭೂತಂ ಚಂದನಂ ಪ್ರತಿಗೃಹ್ಯತಾಂ<br>
         <span class="ENG">Malayaachala-sambhootam chandanam pratigrihyataam<br></span>
 
@@ -379,7 +379,7 @@
     <p style="background-color: #F9ECE3;">
         ತುರೀಯ-ವನ-ಸಂಭೂತಂ ನಾನಾಗುಣಮನೋಹರಂ<br>
         <span class="ENG">Turiyavana-sambhootam naanaaguna-manoharam<br></span>
-        ಆನಂದ-ಸೌರಭಂ ಪುಷ್ಪಂ ಗೃಹ್ಯತಾಮಿದಮುತ್ತಮಂ<br>
+        ಆನಂದ-ಸೌರಭಂ ಪುಷ್ಪಂ ಗೃಹ್ಯತಾಮಿದಮುತ್ತಮಂ (ಗೃಹ್ಯತಾಂ ಇದಂ ಉತ್ತಮಂ)<br>
         <span class="ENG">Aananda-saurabham pushpam grihyataam-idam-uttamam<br></span>
 
         <b>Offer flowers to the deity:</b><br>
@@ -403,35 +403,35 @@
     <p style="background-color: #F9ECE3;">
 
         <b>Offer flowers or akshatas to the deity:</b><br>
-        ೧. ಚಾಂಚಲಾಯೈ ನಮಃ - ಪಾದೌ ಪೂಜಯಾಮಿ<br>
+        ೧. ಚಾಂಚಲಾಯೈ ನಮಃ (restless one) - ಪಾದೌ ಪೂಜಯಾಮಿ (feet)<br>
         <span class="ENG">Chaanchalaayai namah - Paadau poojayaami<br></span>
-        ೨. ಚಪಲಾಯೈ ನಮಃ - ಜಾನುನಿ ಪೂಜಯಾಮಿ<br>
+        ೨. ಚಪಲಾಯೈ ನಮಃ (swift one) - ಜಾನುನಿ ಪೂಜಯಾಮಿ (knees)<br>
         <span class="ENG">Chapalaayai namah - Jaanuni poojayaami<br></span>
-        ೩. ಪೀತಾಂಬರ ಧರಾಯೈ ನಮಃ - ಊರು ಪೂಜಯಾಮಿ<br>
+        ೩. ಪೀತಾಂಬರ ಧರಾಯೈ ನಮಃ (wears yellow garments) - ಊರು ಪೂಜಯಾಮಿ (thighs)<br>
         <span class="ENG">Peetaambara dharaayai namah - Ooru poojayaami<br></span>
-        ೪. ಕಮಲವಾಸಿನ್ಯೈ ನಮಃ - ಕಟಿಂ ಪೂಜಯಾಮಿ<br>
+        ೪. ಕಮಲವಾಸಿನ್ಯೈ ನಮಃ (dwells in the lotus) - ಕಟಿಂ ಪೂಜಯಾಮಿ (waist)<br>
         <span class="ENG">Kamalavaasinyai namah - Katim poojayaami<br></span>
-        ೫. ಪದ್ಮಾಲಯಾಯೈ ನಮಃ - ನಾಭಿಂ ಪೂಜಯಾಮಿ<br>
+        ೫. ಪದ್ಮಾಲಯಾಯೈ ನಮಃ (abode of the lotus) - ನಾಭಿಂ ಪೂಜಯಾಮಿ (navel)<br>
         <span class="ENG">Padmaalayaayai namah - Naabhim poojayaami<br></span>
-        ೬. ಮದನಮಾತ್ರೇ ನಮಃ - ಸ್ತನೌ ಪೂಜಯಾಮಿ<br>
+        ೬. ಮದನಮಾತ್ರೇ ನಮಃ (mother of Cupid) - ಸ್ತನೌ ಪೂಜಯಾಮಿ (breasts)<br>
         <span class="ENG">Madanamaatre namah - Stanau poojayaami<br></span>
-        ೭. ಲಲಿತಾಯೈ ನಮಃ - ಭುಜಯುಗ್ಮೌ ಪೂಜಯಾಮಿ<br>
+        ೭. ಲಲಿತಾಯೈ ನಮಃ (graceful one) - ಭುಜಯುಗ್ಮೌ ಪೂಜಯಾಮಿ (pair of arms)<br>
         <span class="ENG">Lalitaayai namah - Bhujayugmau poojayaami<br></span>
-        ೮. ಕಾಂಬುಕಂಠಾಯೈ ನಮಃ - ಕಂಠಂ ಪೂಜಯಾಮಿ<br>
+        ೮. ಕಾಂಬುಕಂಠಾಯೈ ನಮಃ (conch-like neck) - ಕಂಠಂ ಪೂಜಯಾಮಿ (neck)<br>
         <span class="ENG">Kaambukanthaayai namah - Kantham poojayaami<br></span>
-        ೯. ಸುಮುಖಾಯೈ ನಮಃ - ಮುಖಂ ಪೂಜಯಾಮಿ<br>
+        ೯. ಸುಮುಖಾಯೈ ನಮಃ (beautiful face) - ಮುಖಂ ಪೂಜಯಾಮಿ (face)<br>
         <span class="ENG">Sumukhaayai namah - Mukham poojayaami<br></span>
-        ೧೦. ಶ್ರಿಯೈ ನಮಃ - ಓಷ್ಟೌ ಪೂಜಯಾಮಿ<br>
+        ೧೦. ಶ್ರಿಯೈ ನಮಃ (goddess of fortune) - ಓಷ್ಟೌ ಪೂಜಯಾಮಿ (lips)<br>
         <span class="ENG">Shriyai namah - Oshtau poojayaami<br></span>
-        ೧೧. ಸುನಾಸಿಕಾಯೈ ನಮಃ - ನಾಸಿಕಾಂ ಪೂಜಯಾಮಿ<br>
+        ೧೧. ಸುನಾಸಿಕಾಯೈ ನಮಃ (beautiful nose) - ನಾಸಿಕಾಂ ಪೂಜಯಾಮಿ (nose)<br>
         <span class="ENG">Sunaasikaayai namah - Naasikaam poojayaami<br></span>
-        ೧೨. ಸುನೇತ್ರಾಯೈ ನಮಃ - ನೇತ್ರೇ ಪೂಜಯಾಮಿ<br>
+        ೧೨. ಸುನೇತ್ರಾಯೈ ನಮಃ (beautiful eyes) - ನೇತ್ರೇ ಪೂಜಯಾಮಿ (eyes)<br>
         <span class="ENG">Sunetraayai namah - Netre poojayaami<br></span>
-        ೧೩. ರಮಾಯೈ ನಮಃ - ಕರ್ಣೌ ಪೂಜಯಾಮಿ<br>
+        ೧೩. ರಮಾಯೈ ನಮಃ (Rama, consort of vishnu) - ಕರ್ಣೌ ಪೂಜಯಾಮಿ (ears)<br>
         <span class="ENG">Ramaayai namah - Karnau poojayaami<br></span>
-        ೧೪. ಕಮಲಾಯೈ ನಮಃ - ಶಿರಃ ಪೂಜಯಾಮಿ<br>
+        ೧೪. ಕಮಲಾಯೈ ನಮಃ (lotus-like one) - ಶಿರಃ ಪೂಜಯಾಮಿ (head)<br>
         <span class="ENG">Kamalaayai namah - Shirah poojayaami<br></span>
-        ೧೫. ಶ್ರೀ ಮಹಾಲಕ್ಷ್ಮೀ ದೇವ್ಯೈ ನಮಃ - ಸರ್ವಾಂಗಾನಿ ಪೂಜಯಾಮಿ<br>
+        ೧೫. ಶ್ರೀ ಮಹಾಲಕ್ಷ್ಮೀ ದೇವ್ಯೈ ನಮಃ (great goddess Mahalakshmi) - ಸರ್ವಾಂಗಾನಿ ಪೂಜಯಾಮಿ (all organs)<br>
         <span class="ENG">Shree Mahalakshmee devyai namah - Sarvaangaani poojayaami</span>
     </p>
 
