--- a/puja/vara-maha-lakshmi-puja.html
+++ b/puja/vara-maha-lakshmi-puja.html
@@ -17,58 +17,67 @@
     <button class="toggle-btn" onclick="toggleVisibility()">Show/Hide English Transliteration</button>
 
     <p>
-        This puja serves three important purposes: performing the Varamahalakshmi Vratam, Sharava Sukravaram Lakshmi
-        puja,
-        and conducting the daily (Nitya) puja. When done regularly as a daily ritual, it is believed to remove poverty
-        and bring lasting prosperity to the household.
+        This puja serves three important purposes: performing the Varamahalakshmi Vratam, Sharavana Sukravaram
+        Lakshmi puja, and conducting the daily (Nitya) puja. When done regularly as a daily ritual,
+         it is believed to remove poverty and bring lasting prosperity to the household.
     </p>
 
     <p>
-        There are no restrictions for performing this puja. For better financial blessings, it is recommended to have
-        the husband present and seated during the ceremony. The puja can be conducted either in the morning (Prabhatha
-        veela)
-        or in the evening (Pradosha veela). On the day of the puja, devotees should observe celibacy, avoid
-        non-vegetarian
-        food, and consume only sattvic (pure, vegetarian) meals.
+        There are no restrictions for performing this puja. For better financial blessings, it is recommended
+        to have the husband present and seated during the ceremony. The puja can be conducted either
+        in the morning (Prabhathaveela) or in the evening (Pradosha veela). On the day of the puja, devotees
+        should observe celibacy, avoid non-vegetarian food, and consume only sattvic (pure, vegetarian) meals.
     </p>
 
     <h2>The Puja consists of five main parts:</h2>
 
-    <h3>Peetam and Kalasham</h3>
-    <p>
-        Set up a peetam by applying rice flour designs (moggu), then add rice grains, then place a clean cloth over it.
-        Prepare the kalasham by filling it with water, adding akshata (rice mixed with turmeric) and coins; decorate
-        with mango leaves and topping with a coconut.
-    </p>
+    <h3>Peetam & Kalasham</h3>
+    <img src="../images/peetam-kalasham.png" alt="Peetam and Kalasham" style="max-width:200px; height:auto;"><br>
+    Place a peetam (stool) on the floor, on the peetam:
+    <ul>
+        <li>First, apply rice flour moggu (rice flour rangoli design)</li>
+        <li>Add rice grains</li>
+        <li>Place a clean cloth over it</li>
+    </ul>
+    Prepare the kalasha pot:
+    <ul>
+        <li>Decorate sides with bottu</li>
+        <li>Tie a thread with flowers around the neck of pot</li>
+        <li>Add water, some akshata (rice mixed with turmeric) and coins</li>
+        <li>Prepare coconut, by smearing with turmeric & adding bottu</li>
+        <li>Decorate around the base of the pot with flowers</li>
+    </ul>
+    After the kalasha puja (reciting ..ಬಂಧ್ನಾಮಿ ..bandhnaami):
+    <ul>
+        <li>Place mango leaves around mouth of pot & seal with coconut</li>
+        <li>Wrap the top of the coconut with a cloth, like a cone</li>
+        <li>Insert bangles so the cloth does not unwrap</li>
+        <li>Place a flower on top of cloth cone</li>
+    </ul>
 
-    <h3>General Puja</h3>
-    <p>
-        Perform Aachamaniyam (purification), Sankalpam (intention), Kalasha Aradhana, and Ganapati Puja. Follow this
-        with
-        the Shodashopachara (16-step) puja and Anga Puja (offering to the body parts of the deity). Chant the
-        Ashtottaram,
-        and if possible Kanakadhara and Sri Suktam. Complete with dhoopa (incense), deepa (lamp), and naivedyam
-        (offering food).
-    </p>
+    <h3>Puja with Shodashopachara (16-step) Puja</h3>
+    Note that main difference is about Anga puja (offering to the body parts of the deity),
+    this is only done during Sharavana Sukravaram Lakshmi puja & Varamahalakshmi puja.
 
-    <h3>Thooram (Nine Threads)</h3>
-    <p>
-        Bunch nine cotton threads together and knot them nine times. This is called Grathi or Grathu, symbolizing the
-        goddess's
-        favorite number, nine. Recite nine mantras, offering kumkum or akshata nine times to thooram.
-    </p>
+    <h3>Thooram Granthi Puja & Thoora Dhaaranam</h3>
+    Bunch nine cotton threads (thooram) together and knot (grathi) them nine times.
+    Place a flower in one of the nine knots (middle one). Recite nine mantras, offering
+    kumkum or akshata nine times to the thoorams.
+    
+    <h3>Vratha Katha - Chaarumathi Story</h3>
+    Recite the story of Chaarumathi, who is believed to have performed this puja for
+    the first time. The story is symbolic and should not be interpreted literally.
 
-    <h3>Vratha Katha (Story of the Vow)</h3>
-    <p>
-        Recite the story of Chaarumathi, who is believed to have performed this puja for the first time. The story is
-        symbolic
-        and should not be interpreted literally.
-    </p>
-
-    <h3>Vaayana Pradhaanam (Distribution of Gifts)</h3>
-    <p>
-        Conclude by giving gifts to the women present, symbolizing generosity and goodwill.
-    </p>
+    <h3>Vayana Pradhaanam with Mantra</h3>
+    <ul>
+        <li>While the lady is standing, apply:</li>
+        <ul>
+            <li>Kumkum tn the forehead</li>
+            <li>Chandanam to the cheeks</li>
+            <li>Turmeric to both feet</li>
+        </ul>
+        Then make the lady sit, recite the mantra (indira prathigrhnaatu..) while giving the offerings.
+    </ul>
 
     <div id="shuddikarana-mantra"></div>
     <div id="ganapati-prarthana"></div>
@@ -621,7 +630,7 @@
     </p>
 
     <h2>ವಾಯನ ದಾನಂ <span class="ENG">(Vaayana Dhaanam)</span></h2>
-    <p style="background-color: beige;">
+    <p style="background-color: #F0DDD6;">
         <b>Chant this mantra and give vaayanam (offerings to ladies):</b><br>
 
         ಇಂದಿರಾ ಪ್ರತಿಗೃಹ್ಣಾತು ಇಂದಿರಾವೈ ದದಾತಿಚ<br>
